--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "graphql": "^16.8.1",
     "nuxt": "^3.8.2",
+    "nuxt-graphql-request": "^7.0.4",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
